made changes to demo_index.html

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    some information about myself
     <!-- Your name -->
-
+    wgoode3 is good enough
     <!-- Your GitHub user name -->
-    
+    wgoode3
     <!-- Your favorite coding language -->
-
+    we know like 3 now so um... javascript?`
   </body>
 </html>
