--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,11 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <p>Dale Fairfield</p>
 
-    <!-- Your GitHub user name -->
+    <p>dalefairfield</p>
     
-    <!-- Your favorite coding language -->
+    <p>html</p>
 
   </body>
 </html>
