added info about myself

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>Andres Velasquez</p>
     <!-- Your GitHub user name -->
-    
+    <p>crayonshin</p>
     <!-- Your favorite coding language -->
-
+    <p>I don't have a lot of coding experience but I have dabbled with and liked C++. Liking javascript so far. Especially with jquery and jqueryUI.</P>
   </body>
 </html>
