--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,9 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
-
+    <p>I have no background so far outside of coding dojo! I come from a Biology/sports background I can't wait for the challenge.</p>
+    <p>My name is David Olivas.</p>
+    <p>Github: Djolivas93</p>
+    <p>My favorite coding language would have to be C++ or Java</p>
   </body>
 </html>
