--- a/demo_index.html
+++ b/demo_index.html
@@ -12,6 +12,6 @@
     <!-- Your GitHub user name -->
     
     <!-- Your favorite coding language -->
-
+    <p>Oscar E. my user information is my name and I'm not sure what my favorite coding language is. </p>
   </body>
 </html>
