--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,12 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <!-- I am not a dog -->
+    <!-- Quinten -->
 
-    <!-- Your GitHub user name -->
+    <!-- Quint436 -->
     
-    <!-- Your favorite coding language -->
+    <!-- SQL because its the easiest to me so far! -->
 
   </body>
 </html>
