--- a/demo_index.html
+++ b/demo_index.html
@@ -11,8 +11,9 @@
     Erik Clineschmidt
 
     <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    Slopeside
 
+    <!-- Your favorite coding language -->
+    javascript/node/angular/express together
   </body>
 </html>
