--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,10 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
+    <h2>My Name is Brandon Lai</h2>
+    <p>My GitHub user name is MasterRayce</p>
+    <p>As of right now I don't have a favorite coding language</p>
     
-    <!-- Your favorite coding language -->
 
   </body>
 </html>
