--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,12 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <p>Zach Alaniz</p>
 
     <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    <p>zalaniz2</p>
 
+    <!-- Your favorite coding language -->
+    <p> Java/Javascript </p>
   </body>
 </html>
