added more detail

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-    Nate Davis
+    My name is Nate Davis
     <!-- Your GitHub user name -->
-    n8davis	 
+    My GitHub username: n8davis	 
     <!-- Your favorite coding language -->
-    Not sure yet :)
+    GIT is my favorite language
   </body>
 </html>
