--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,20 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>
+      Hello
+    </p>
     <!-- Your name -->
-
+    <p>
+      Steven
+    </p>
     <!-- Your GitHub user name -->
-    
+    <p>
+      stevenchun1208
+    </p>
     <!-- Your favorite coding language -->
-
+    <p>
+      javascript!
+    </p>
   </body>
 </html>
