made changes to demo_index.html

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,11 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>my name: daisy qi</p>
     <!-- Your GitHub user name -->
-    
+    <p>my github user name: sooooooooooo</p>
     <!-- Your favorite coding language -->
+    <p>my favorite coding language: java</p>
 
   </body>
 </html>
