--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>Ben Swanson</p>
     <!-- Your GitHub user name -->
-    
+    <p>qwerji</p>
     <!-- Your favorite coding language -->
-
+    <p>Javascript (the only one I know besides html/css)</p>
   </body>
 </html>
