--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+        <h1>Andy Carver</h1>
     <!-- Your GitHub user name -->
-    
+        <h3>andycarver</h3>
     <!-- Your favorite coding language -->
-
+        <h5>javascript</h5>
   </body>
 </html>
