--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,11 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <p>My name is Dan &quot;PJ&quot; Kohli!</p><!-- Your name -->
 
-    <!-- Your GitHub user name -->
+    <p>My GitHub user name is drkohlipk</p><!-- Your GitHub user name -->
     
-    <!-- Your favorite coding language -->
+    <p>My favorite coding language at the time being is Javascript!</p> <!-- Your favorite coding language -->
 
   </body>
 </html>
