added personal info

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p><small>NAME</small> Rich Hampton</p>
     <!-- Your GitHub user name -->
-    
+    <p><small>GITHUB USER</small> richampton</p>
     <!-- Your favorite coding language -->
-
+    <p><small>FAVORITE CODING LANGUAGE</small> I don't know!</p>
   </body>
 </html>
