--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,14 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <h1>Grace Shieh</h1>
 
     <!-- Your GitHub user name -->
+    <p>GitHub user name: graceshieh</p>
     
     <!-- Your favorite coding language -->
+    <p>Jquery is difficult right now, but it's fun at the same time.</p>
+    <p>djfiejwfo;aij</p>
 
   </body>
 </html>
