--- a/demo_index.html
+++ b/demo_index.html
@@ -5,13 +5,13 @@
   </head>
   <body>
     <h1>Git Demo</h1>
-    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
+<p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+    <p>I am a cs student learning coding in cojo </p>   <!-- Add some information about yourself below -->
+    <h2>my name is Haocheng Yang</h2><!-- Your name -->
 
-    <!-- Your GitHub user name -->
+    <p>Haocheng Yang</p><!-- Your GitHub user name -->
     
-    <!-- Your favorite coding language -->
+    <p>My favorite coding language is javascript and python</p><!-- Your favorite coding language -->
 
   </body>
 </html>
