added my personal information to the page

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    Scott Rock
     <!-- Your GitHub user name -->
-    
+    scottarock
     <!-- Your favorite coding language -->
-
+    Smalltalk from way back in my professional days 15 years ago. I think Ruby is the spiritual successor and am looking forward to learning it some time.
   </body>
 </html>
