--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,11 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
-
+<h3>My name is</h3>
+<p>Nolan</p>
+<h3>My GitHub username is </h3>
+<p>nollybear</p>
+<h3>My favorite coding language is</h3>
+<p>Python</p>
   </body>
 </html>
