updates to demo_index.html

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>My name is Zack. When im not eating my favorite thing to do is go on a hike.</p>
     <!-- Your name -->
-
+    <h1>Zachary Ryan Kouba</h1>
     <!-- Your GitHub user name -->
-    
+    <h2>my github username is zkouba19</h2>
     <!-- Your favorite coding language -->
-
+    <p>my favorite coding language so far is jquery. This is because it's the most complicated type of coding language i've learned so far.</p>
   </body>
 </html>
