Added personal info to the demo_index.html file

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,15 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+	I am currently a student working on learning how to use GitHub. 
+
     <!-- Your name -->
+	Bryan Jones
 
     <!-- Your GitHub user name -->
+	dasbeard
     
     <!-- Your favorite coding language -->
-
+	Not suer at this point, still learning
   </body>
 </html>
