adding info to html file

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,15 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    I like Pad See Ew and Futurama. 
     <!-- Your name -->
+    Amber Esmale
 
     <!-- Your GitHub user name -->
-    
+    aesmale
+
     <!-- Your favorite coding language -->
+    Ruby
 
   </body>
 </html>
