--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+<p> When I was five I burnt my hand. </p>
     <!-- Your name -->
-
+<p> Kyle Austin Crumpler </p>
     <!-- Your GitHub user name -->
-    
+ <p> Kcrumpler1088 </p>   
     <!-- Your favorite coding language -->
-
+<p> English, ahaha </p>
   </body>
 </html>
