updated the html file with some info

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,23 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>
+      I will get all 5 black belts.
+    </p>
     <!-- Your name -->
+    <p>
+      Anthony
+    </p>
 
     <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    <p>
+      acarlson777
+    </p>
 
+    <!-- Your favorite coding language -->
+    <p>
+      Python
+    </p>
+    
   </body>
 </html>
