--- a/demo_index.html
+++ b/demo_index.html
@@ -5,7 +5,9 @@
   </head>
   <body>
     <h1>Git Demo</h1>
-    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original.
+      I have now cloned the repository and am 
+      making some changes</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
 
