--- a/demo_index.html
+++ b/demo_index.html
@@ -2,15 +2,16 @@
 <html>
   <head>
     <title>Git Demo Index Page</title>
+    <style> span { font-weight: 700 } </style>
   </head>
   <body>
     <h1>Git Demo</h1>
-    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+    <p>This is our <span>test repository</span> to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
 
     <!-- Your GitHub user name -->
-    
+
     <!-- Your favorite coding language -->
 
   </body>
