--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    DONT FALL FOR IT
     <!-- Your name -->
-
+    ITS A TRAP
     <!-- Your GitHub user name -->
-    
+    DONT YOU DARE!!!!
     <!-- Your favorite coding language -->
-
+    NOOOOOOOOO!
   </body>
 </html>
