added ending P tage

--- a/demo_index.html
+++ b/demo_index.html
@@ -12,6 +12,6 @@
     <!-- Your GitHub user name -->
     <p>smirziteh</p>
     <!-- Your favorite coding language -->
-    <p>Java is my favorite coding language
+    <p>Java is my favorite coding language</p>
   </body>
 </html>
