added requested information

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    I'm enjoying the Coding Dojo bootcamp so far and look forward to learning more
     <!-- Your name -->
-
+    Kenny
     <!-- Your GitHub user name -->
-    
+    klandon94
     <!-- Your favorite coding language -->
-
+    Java
   </body>
 </html>
