--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,12 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <p>Tim</p>
 
     <!-- Your GitHub user name -->
-    
+    <p>timwhunt</p>
     <!-- Your favorite coding language -->
+    <p>Java</p>
 
   </body>
 </html>
