--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,15 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>I am a current WebFun student at the Seatlle Coding Dojo!</p>
     <!-- Your name -->
+    <p>Sean Hildreth</p>
 
     <!-- Your GitHub user name -->
-    
+    <p>SeanHildreth</p>
+
     <!-- Your favorite coding language -->
+    <p>I don't know yet which language will be my favorite, I have some experience with java, and I like that, also a small amount of C++.</p>
 
   </body>
 </html>
