--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,9 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
+    <h3>Vidisha Tindolia</h3>
+    <h4>GitHub username : vidisha-2</h4>
+    <h5>Fav Coding Language - C++</h5>
     
-    <!-- Your favorite coding language -->
-
   </body>
 </html>
