--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,12 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+	Pete Jung
 
     <!-- Your GitHub user name -->
+	pjung101
     
     <!-- Your favorite coding language -->
-
+	N/A
   </body>
 </html>
