--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,11 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    Hi my name is C Rodriguez
 
     <!-- Your GitHub user name -->
-    
+    ChristianDeColombia
     <!-- Your favorite coding language -->
-
+so far my favorite coding language is HTML, but thats just because iv only been coding for 2 weeks
   </body>
 </html>
