--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,9 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    <h2> I love pizza and chicken wings</h2>
+    <h3>TimGrossi</h3>
+    <p>My favorite language right now is probably CSS.</p>
 
   </body>
 </html>
