updated index file

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,16 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>I love cars!</p>
     <!-- Your name -->
+    <p>Alex</p>
 
     <!-- Your GitHub user name -->
+    <p>AlexandruPopa92</p>
     
     <!-- Your favorite coding language -->
+    Javascript
+    
 
   </body>
 </html>
