Saying hello from html

--- a/demo_index.html
+++ b/demo_index.html
@@ -13,9 +13,11 @@
 
     <!-- Your GitHub user name -->
     <p>AlexandruPopa92</p>
-    
+
     <!-- Your favorite coding language -->
     Javascript!!!
+
+    <h1>Hello from Alex</h1>
 
 
   </body>
