--- a/demo_index.html
+++ b/demo_index.html
@@ -5,13 +5,15 @@
   </head>
   <body>
     <h1>Git Demo</h1>
-    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+    <p>
+      This is our test repository to test forking a repository and sending a pull request back to make changes to
+      the original
+    </p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
 
     <!-- Your GitHub user name -->
-    
+    <p>test1234</p>
     <!-- Your favorite coding language -->
-
   </body>
 </html>
