--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,10 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    <p> I am very hard worker </p>
+    <p> My name is Reza </p>
+     <p> My github username is: rzjrh</p>
+     <p> my favorite coding language is Java </p>
 
   </body>
 </html>
