added feature_alpha to index.html along with updated user info

--- a/demo_index.html
+++ b/demo_index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Git Demo Index Page</title>
-  </head>
-  <body>
-    <h1>Git Demo</h1>
-    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
 
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+<head>
+  <title>Git Demo Index Page</title>
+</head>
 
-  </body>
+<body>
+  <h1>Git Demo</h1>
+  <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the
+    original</p>
+  <!-- Add some information about yourself below -->
+  <p>feature_alpha</p>
+  <!-- Your name -->
+  <p>Robert Scott</p>
+  <!-- Your GitHub user name -->
+  <p>rsrob600</p>
+  <!-- Your favorite coding language -->
+  <p>My favorite coding language is Java</p>
+</body>
+
 </html>
