--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,15 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p> Hi! </p>
     <!-- Your name -->
+    <p> Cody Ortiz </p>
 
     <!-- Your GitHub user name -->
+    <p> CodingCody31 </p>
     
     <!-- Your favorite coding language -->
+    <p> Java all the way! </p>
 
   </body>
 </html>
