--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+  
     <!-- Your name -->
-
+    Hello, my name is Jen
     <!-- Your GitHub user name -->
-    
+    My username is jghoang
     <!-- Your favorite coding language -->
-
+    so far a little bit of everything.
   </body>
 </html>
