--- a/demo_index.html
+++ b/demo_index.html
@@ -9,6 +9,7 @@
     <!-- Add some information about yourself below -->
     <!-- Your name -->
     <p>Jay </p>
+    Recycle.........
 
     <!-- Your GitHub user name -->
     <h1> take a guess </h1>
