--- a/demo_index.html
+++ b/demo_index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Git Demo Index Page</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <p>I love cats and photography.</p>
+    <h1>Kirsten Lindblom</h1>
+    <p>kirstenmay</p>
+    <p>So far anything but CSS :)</p>
 
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+</body>
 
-  </body>
 </html>
