--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,14 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>my name is xiao tan</p>
     <!-- Your name -->
 
     <!-- Your GitHub user name -->
+    <p>GitHub user name is xiao-Tan</p>
     
     <!-- Your favorite coding language -->
+    <p>java</p>
 
   </body>
 </html>
