--- a/demo_index.html
+++ b/demo_index.html
@@ -9,9 +9,15 @@
     <!-- Add some information about yourself below -->
     <!-- Your name -->
 
+    <!-- David Mann -->
+
     <!-- Your GitHub user name -->
-    
+
+    <!-- StarlightBlue -->
+
     <!-- Your favorite coding language -->
+
+    <!-- Python -->
 
   </body>
 </html>
