--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,11 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <p>Andrii Ivanytskyi</p>
 
     <!-- Your GitHub user name -->
-    
+    <p>Serber92</p>
     <!-- Your favorite coding language -->
-
+    <p>Pascal</p>
   </body>
 </html>
