Made changes to demo_index.html

--- a/demo_index.html
+++ b/demo_index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+ <html>
   <head>
     <title>Git Demo Index Page</title>
   </head>
@@ -7,11 +7,14 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <!-- Your Name -->
+	<h1> Jin Kang </h1>
 
     <!-- Your GitHub user name -->
-    
+    	<h3> kjinn62 </h3>
+
     <!-- Your favorite coding language -->
+	<p> No favorite coding language so far </p>	
 
   </body>
 </html>
