--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <h1>Greg Chance</h1>
 
-    <!-- Your GitHub user name -->
+    <h2>g.chance (I think)</h2>
     
     <!-- Your favorite coding language -->
+    <p>python!</p>
 
   </body>
 </html>
