--- a/demo_index.html
+++ b/demo_index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Git Demo Index Page</title>
+    <title>Hello Git Demo Index Page</title>
   </head>
   <body>
     <h1>Git Demo</h1>
+    <a href="#"></a>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
