agregandas modificaciones a html para actividad de Update y Commit

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,11 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    Paco
     <!-- Your GitHub user name -->
-    
+    codingdojostudent
     <!-- Your favorite coding language -->
-
+    well, I like be say: I love java because is anywhere; but I like Python for his smart sintaxis and economy of code lines
+    Bueno, me gustaria decir que Java, porque esta en todas partes
   </body>
 </html>
