Cambios en el archivo demo_index.html

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h4>Hola!, mi nombre de Juan</h4>
     <!-- Your GitHub user name -->
-    
+    <p>Mi usuario en github es JCRZ</p>
     <!-- Your favorite coding language -->
-
+    <p>Y... Mi lenguaje favorito es JavaScript</p>
   </body>
 </html>
