Agregando Bootstrap 4 y un par de textos de contacto

--- a/demo_index.html
+++ b/demo_index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <title>Git Demo Index Page</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Git Demo</h1>
-    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
 
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="#">Front-End Course</a>
+      </div>
+    </nav>
+
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">        
+        <h1 class="display-4">Forking and Cloning Exercise</h1>
+        <p class="lead">Este es un simple jumbotron para practicar un fork de un repositorio existente.</p>
+        <hr class="my-4">
+        <p>Mi nombre es Claudio Hermosilla, soy ingeniero de software y vivo en Temuco, Chile.</p>
+        <p>Los lenguajes principales con los que trabajo son PHP y Javascript, actualmente estoy aprendiente Python.</p>
+        <p class="lead">
+          <a class="btn btn-primary btn-lg" href="https://github.com/Claudiocolt" role="button">Go to Github.com/Claudiocolt</a>
+        </p>
+      </div>
+    </div>
+
+
 
   </body>
 </html>
