update demo_index.html, adding new information about myself, such as names, GitHub username, and favorite programming language

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>I am a Logistics Analyst that want to learn more about coding :)</p>
     <!-- Your name -->
-
+    <p>Dennis Muljadi</p>
     <!-- Your GitHub user name -->
-    
+    <p>dennism29</p>
     <!-- Your favorite coding language -->
-
+    <p>Python</p>
   </body>
 </html>
