--- a/demo_index.html
+++ b/demo_index.html
@@ -14,7 +14,7 @@
     <p>tringakrasniqi</p>
     
     <!-- Your favorite coding language -->
-    <p>javascript</p>
+    <p>javascript & kotlin</p>
 
   </body>
 </html>
