--- a/demo_index.html
+++ b/demo_index.html
@@ -6,8 +6,9 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <p>Irina Markov</p>
+    <p>imarkov5</p>
+    <p>Java Script since it's the only language I learned so far.</p>
 
     <!-- Your GitHub user name -->
     
