--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+Chaya Duboff
     <!-- Your GitHub user name -->
-    
+    cduboff
     <!-- Your favorite coding language -->
-
+Not sure yet, but at the moment probably JS.
   </body>
 </html>
