added my name, user name and fav coding language

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,13 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <p>My Name:  Stephen Graham</p>
 
     <!-- Your GitHub user name -->
+    <p>My Github Username:  s-graham42</p>
     
     <!-- Your favorite coding language -->
+    <p>Favorite Coding Language so far: Javascript</p>
 
   </body>
 </html>
