--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,13 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
-
+    <ul>
+        <!-- Your name -->
+        <li>My name: Christina</li>
+        <!-- Your GitHub user name -->
+        <li>My GitHub user name: cmlebron14</li>
+        <!-- Your favorite coding language -->
+        <li>My favorite coding language: JS</li>
+    </ul>
   </body>
 </html>
