updated html file

--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,19 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <!-- learning to code -->
+    <!-- Gustavo Leon -->
 
-    <!-- Your GitHub user name -->
+    <!-- leongus1 -->
     
-    <!-- Your favorite coding language -->
+    <!-- Java - the one i know the most -->
 
   </body>
 </html>
+
+
+
+
+
+
+
