--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,13 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    I want to learn coding and computer programming.
     <!-- Your name -->
-
+    Ryan
     <!-- Your GitHub user name -->
-    
+    rdelabahan
     <!-- Your favorite coding language -->
+    Python
 
   </body>
 </html>
