my changes to the demo

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,14 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, itaque.</p>
     <!-- Your name -->
-
+    <h1>Adam Abshire</h1>
     <!-- Your GitHub user name -->
+    <h2>Adam-Abshire</h2>
     
     <!-- Your favorite coding language -->
+    <h3>I don't know yet!</h3>
 
   </body>
 </html>
