--- a/demo_index.html
+++ b/demo_index.html
@@ -14,7 +14,7 @@
     <!-- Your GitHub user name -->
     <p>kevotw09</p>
     <!-- Your favorite coding language -->
-    <p>Python</p>
+    <p>Python and JS</p>
 </body>
 
 </html>
