added some information to the demo_index.html file

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,13 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>Hi, my name is Erin, I live near Seattle, I like learning about code!</p>
+    <p>I also like kitties, anime, and cheese covered french fries!</p>
     <!-- Your name -->
-
+    <h2>Erin Winking</h2>
     <!-- Your GitHub user name -->
-    
+    <h3>ewink1977</h3>
     <!-- Your favorite coding language -->
-
+    <p>Right now it's CSS as it's what I know best, but I am sure that will change as I learn more JavaScript and Python!</p>
   </body>
 </html>
