--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>Hello! My name is:</p>
     <!-- Your name -->
-
+    <p><b>Diego Labrin</b></p><br>
     <!-- Your GitHub user name -->
-    
+    <p>My GitHub username is <b>Diego-LC</b></p>
     <!-- Your favorite coding language -->
-
+    <p>My favourite languages is JavaScript and Python</p>
   </body>
 </html>
