se sube primer avance branch

--- a/demo_index.html
+++ b/demo_index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>Git Demo Index Page</title>
+    <meta charset="utf-8">
+    <title>Coding Dojo Rock</title>
 </head>
 
 <body>
-    <h1>Git Demo</h1>
-    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
-    Catalina
-
-    <!-- Your GitHub user name -->
-    Catalina-AR
-
-    <!-- Your favorite coding language -->
-    Python
+    <h2>Coding Dojo Rock</h2>
+    <div>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </div>
+    <img src="images/2Xl3XzE-3.png" alt="">
+    <img src="images/2Xl3XzE-4.png" alt="">
+    <img src="images/2Xl3XzE-2.png" alt="">
+    <img src="images/2Xl3XzE.png" alt="">
 
 </body>
 
