--- a/demo_index.html
+++ b/demo_index.html
@@ -12,20 +12,13 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore <br> magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo <br> consequat. Duis
         aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </div>
-    <div id="imagenes">
-        <div class="imagen1">
-            <img src="images/gatito.png">
-        </div>
-        <div class="imagen2">
-            <img src="images/estatua.png">
-        </div>
-        <div class="imagen3">
-            <img src="images/paws.png">
-        </div>
-        <div class="imagen4">
-            <img src="images/mountain.png">
-        </div>
+    <div class="imgs">
+        <img src="images/gatito.png" />
+        <img src="images/estatua.png" />
+        <img src="images/paws.png" />
+        <img src="images/mountain.png" />
     </div>
+
 
 </body>
 
