se sube  avance branch

--- a/demo_index.html
+++ b/demo_index.html
@@ -9,13 +9,19 @@
 <body>
     <h2>Coding Dojo Rock</h2>
     <div id="texto">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore <br> magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo <br> consequat. Duis
-        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </div>
     <div class="imgs">
         <img src="images/gatito.png" />
+    </div>
+    <div class="imgs">
         <img src="images/estatua.png" />
+    </div>
+    <div class="imgs">
         <img src="images/paws.png" />
+    </div>
+    <div class="imgs">
         <img src="images/mountain.png" />
     </div>
 
