se edita style.css

--- a/demo_index.html
+++ b/demo_index.html
@@ -3,17 +3,18 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Coding Dojo Rock</title>
+    <title>Coding Dojo Rocks</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <h2>Coding Dojo Rock</h2>
-    <div>
+    <h2>Coding Dojo Rocks!</h2>
+    <div class="texto">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
         in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </div>
     <div id="container">
-        <div>
+        <div class="imagenes">
             <img src="images/puppy.jpg">
             <img src="images/franklin.jpg">
             <img src="images/paws.png">
