--- a/demo_index.html
+++ b/demo_index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Git Demo Index Page</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <!-- Carlos Maldonado -->
 
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    <!-- https://github.com/Carlos-maldonado578 -->
 
-  </body>
+    <!-- Python -->
+
+</body>
+
 </html>
