--- a/demo_index.html
+++ b/demo_index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Git Demo Index Page</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>Hector Zambrano</p>
     <!-- Your GitHub user name -->
-    
+    <p>HZ-CL</p>
     <!-- Your favorite coding language -->
+    <p>Python</p>
+</body>
 
-  </body>
 </html>
