demo_index.html modified

--- a/demo_index.html
+++ b/demo_index.html
@@ -12,6 +12,7 @@
     <!-- Your GitHub user name -->
     
     <!-- Your favorite coding language -->
+    <p>Newly Added text for updated and commit assignment!</p>
 
   </body>
 </html>
