modified to the new branch

--- a/demo_index.html
+++ b/demo_index.html
@@ -13,6 +13,7 @@
     
     <!-- Your favorite coding language -->
     <p>Newly Added text for updated and commit assignment!</p>
+    <p> Newly added text on a new branch - new feature</p>
 
   </body>
 </html>
