cambio color texto demo_index.html

--- a/demo_index.html
+++ b/demo_index.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <title>Git Demo Index Page</title>
+    <style>
+        p {
+            color: blue
+        }
+    </style>
   </head>
   <body>
     <h1>Git Demo</h1>
