One final push at 1:36am

--- a/demo_index.html
+++ b/demo_index.html
@@ -13,6 +13,6 @@
     <!-- Your GitHub user name -->
       <p>roman-dz</p>
     <!-- Your favorite coding language -->
-      <p>Python</p>
+      <p>Python and JavaScriptS</p>
   </body>
 </html>
