Added a short introduction of myself!

--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,10 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
+      Hello! My name is Melanie Neilan.
+      My Github username is melnee
 
-    <!-- Your GitHub user name -->
+      My favorite coding language is Java. :)
     
-    <!-- Your favorite coding language -->
-
   </body>
 </html>
