updated demo_index.html with my information

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>I work at Amazon BFI4!</p>
     <!-- Your name -->
-
+    <p>My name is Vince Colletti.</p>
     <!-- Your GitHub user name -->
-    
+    <p>My GitHub user name is VinceColletti.</p>
     <!-- Your favorite coding language -->
-
+    <p>I don't have a favorite coding language yet.</p>
   </body>
 </html>
