New data added to the demo_index file

--- a/demo_index.html
+++ b/demo_index.html
@@ -10,8 +10,9 @@
     <!-- Your name -->
 
     <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    <p>Egzona Maloku</p>
 
+    <!-- Your favorite coding language -->
+    <p>My favorite coding language is PHP</p>
   </body>
 </html>
