testing commit on clone file

--- a/demo_index.html
+++ b/demo_index.html
@@ -13,5 +13,6 @@
       DustinSMac
     <!-- Your favorite coding language -->
       I don't know yet, but I liked the simplicity of R
+      Change the file a bit, nothing the first time so edit the 2nd time.
   </body>
 </html>
