--- a/demo_index.html
+++ b/demo_index.html
@@ -5,13 +5,15 @@
   </head>
   <body>
     <h1>Git Demo</h1>
-    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+    <p>This is our test repository to test forking a repository 
+      and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <h2>I love learning programming!</h2>
     <!-- Your name -->
-
+    <h2>Gary Angarita</h2>
     <!-- Your GitHub user name -->
-    
+    <h2>https://github.com/GaryAngarita</h2>
     <!-- Your favorite coding language -->
-
+    <h2>Python</h2>
   </body>
 </html>
