Adding personal information about me.

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h2>Andres Alvear</h2>
     <!-- Your GitHub user name -->
-    
+    <p>My GitHub user name: andriu5</p>
     <!-- Your favorite coding language -->
-
+    <p>My favorite coding languages are: C, C++, Python</p>
   </body>
 </html>
