--- a/demo_index.html
+++ b/demo_index.html
@@ -12,6 +12,6 @@
     <!-- Your GitHub user name -->
     <p>Nghuynh07</p>
     <!-- Your favorite coding language -->
-    <p>Not sure yet!</p>
+    <p>Not sure yet! Will decide soon</p>
   </body>
 </html>
