added some stuff about my GitHub skills in the demo_index.html file

--- a/demo_index.html
+++ b/demo_index.html
@@ -6,6 +6,7 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+    <p>My name is Julian Sunn.  I am a Git and GitHub newbie but hopefully with these exercises, I will be on my way to being a Git and GitHub Wizard!</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
 
