added answers to questions

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+      Nick K.
     <!-- Your GitHub user name -->
-    
+      NickKing244
     <!-- Your favorite coding language -->
-
+      Only know JavaScript so far so I guess that is my favorite language for now
   </body>
 </html>
