--- a/demo_index.html
+++ b/demo_index.html
@@ -12,6 +12,7 @@
     <!-- Your GitHub user name -->
     
     <!-- Your favorite coding language -->
+    <!-- Changes chnages to this puppy -->
 
   </body>
 </html>
