second round of changes

--- a/demo_index.html
+++ b/demo_index.html
@@ -13,6 +13,7 @@
     
     <!-- Your favorite coding language -->
     <!-- Changes chnages to this puppy -->
+    <!-- SECOND ROUND OF CHANGES -->
 
   </body>
 </html>
